# SDFGen

./: CMakeLists.txt  main.cpp
container/: Array3D.h  Array3D_i.h  Space.cpp  Space.h
geom/: BoundingBox.cpp  BoundingBox.h  Line.cc  Line.h  Plane.h  Point.h  Point_i.h  Polygon.cpp  Polygon.h
geom/math/: Point.h  Point_i.h  Transform.h  Transform_i.h
test/: PolygonTest.cc
util/: Utility.h
